# lumen

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  SPRINT_PLAN.md  WORKING_LOG.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.claude/: settings.local.json
.claude/commands/: briefing.md  lumen.md
.claude/rules/: architecture.md  classification.md  frontend.md
.claude/skills/lumen/: SKILL.md
crates/rss-cli/: Cargo.toml
crates/rss-cli/src/: main.rs
crates/rss-core/: Cargo.toml
crates/rss-core/src/: lib.rs  opml.rs  parser.rs
crates/rss-extract/: Cargo.toml
crates/rss-extract/src/: lib.rs
crates/rss-fetch/: Cargo.toml
crates/rss-fetch/src/: lib.rs
crates/rss-ner/: Cargo.toml
crates/rss-ner/src/: lib.rs
crates/rss-store/: Cargo.toml
crates/rss-store/src/: lib.rs
docs/: ROADMAP.md  refernece.txt
docs/decisions/: 001-agent-cli-interface-design.md  002-cli-friction-points-from-real-usage.md
scripts/: align.sh  cdp-extract.mjs  chrome-cdp-setup.bat  install.ps1  verify.sh
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
tests/: a11y-audit.mjs  e2e.sh  nvda-checklist.sh
