[package]
name = "rss-reader"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
rss-core = { path = "../crates/rss-core" }
rss-store = { path = "../crates/rss-store" }
rss-fetch = { path = "../crates/rss-fetch" }
rss-extract = { path = "../crates/rss-extract" }
