[package]
name = "rss-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
rss-core = { path = "../rss-core" }
rss-store = { path = "../rss-store" }
rss-fetch = { path = "../rss-fetch" }
rss-extract = { path = "../rss-extract" }
rss-ner = { path = "../rss-ner" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
dirs = "5"
rayon = "1.10"
reqwest = { version = "0.12", features = ["blocking"] }
